--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -30,6 +30,21 @@
     $('#alert-placeholder').append('<div class="alert alert-danger alert-dismissible"><button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button><span>'+message+'</span></div>')
     }
     
+    var name = $.cookie('name');
+    if (typeof name !== 'undefined' && name.trim()) {
+      $('#name').val(name);
+    }
+    
+    var suit = $.cookie('suit');
+    if (typeof suit !== 'undefined' && suit.trim()) {
+      $('#suit').val(suit);
+    }
+
+    var location = $.cookie('location');
+    if (typeof location !== 'undefined' && location.trim()) {
+      $('#location').val(location);
+    }
+
     $('form').submit( function( e ) {
       var form_valid = true;
       $('#alert-placeholder').empty();
@@ -37,15 +52,24 @@
       if ($('#name').val().length === 0 || !$('#name').val().trim()) {
         bootstrap_alert.warning('Вы не указали как Вас зовут.');
         form_valid = false;
+      } else {
+        $.cookie('name', $('#name').val(), { expires: 365, path: '/' });
       }
+
       if ($('#suit').val().length === 0 || !$('#suit').val().trim()) {
         bootstrap_alert.warning('Вы не указали в чем Вы летали этот полет.');
         form_valid = false;
+      } else {
+        $.cookie('suit', $('#suit').val(), { expires: 365, path: '/' });
       }
+
       if ($('#location').val().length === 0 || !$('#location').val().trim()) {
         bootstrap_alert.warning('Вы не указали где Вы летали.');
         form_valid = false;
+      } else {
+        $.cookie('location', $('#location').val(), { expires: 365, path: '/' });
       }
+
       if ($('#track_file').val().length === 0 || !$('#track_file').val().trim()) {
         bootstrap_alert.warning('Вы не выбрали файл.');
         form_valid = false;
