--- a/app/views/static_pages/upload_error.html.erb
+++ b/app/views/static_pages/upload_error.html.erb
@@ -1,2 +1,2 @@
-<h1>Не поддерживаемый формат файла</h1>
+<h1>Ошибка при чтении файла</h1>
 <p>Пожалуйста, отправьте загружаемый файл по адресу ab@ipkunin.ru, указав каким устройством он был записан. После реализации поддержки данного формата я напишу Вам.</p>
