--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -82,7 +82,7 @@
 </script>
 
 <div class="page-header">
-  <h1>Летай! Соревнуйся! Побеждай! <small> Альфа версия. Это еще не Бета.</small></h1>
+  <h1><%=t :index_title %><small> <%=t :index_subtitle %></small></h1>
 </div>
   
 <div class="jumbotron col-sm-8">
