--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
     <div role="navigation" class="navbar navbar-default navbar-static-top">
       <div class="container">
         <div class="navbar-header">
-          <a class="navbar-brand" href="/">Главная</a>
+          <a class="navbar-brand" href="/"><%= t :home %></a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
