--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,6 +21,15 @@
               <%= link_to t(:header_about), :controller => 'static_pages', :action => 'about' %>
             </li>
           </ul>
+          <ul class="nav navbar-nav navbar-right">
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                <%= image_tag 'blank.gif', class: "flag flag-#{ I18n.locale}" %>
+                <span class="caret"></span>
+              </a>
+              <%= lang_menu %>
+            </li>
+          </ul>
         </div>
       </div>
     </div>
