--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,13 +22,15 @@
             </li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                <%= image_tag 'blank.gif', class: "flag flag-#{ I18n.locale}" %>
-                <span class="caret"></span>
-              </a>
-              <%= lang_menu %>
-            </li>
+            <% if !controller.controller_name.eql? 'track_select' %>
+              <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                  <%= image_tag 'blank.gif', class: "flag flag-#{ I18n.locale}" %>
+                  <span class="caret"></span>
+                </a>
+                <%= lang_menu %>
+              </li>
+            <% end %>
           </ul>
         </div>
       </div>
