tracks index translation

--- a/app/views/tracks/index.html.erb
+++ b/app/views/tracks/index.html.erb
@@ -8,17 +8,17 @@
 </script>
 
 <div class="page-header">
-  <h1>Загруженные треки:</h1>
+  <h1><%=t :ti_title %></h1>
 </div>
 <table class="table table-hover">
   <thead>
     <tr>
-      <th>#</th>
-      <th>Пилот</th>
-      <th>Вингсьют</th>
-      <th>Локация</th>
-      <th>Комментарий</th>
-      <th>Загружен</th>
+      <th><%=t :ti_t_number %></th>
+      <th><%=t :ti_t_name %></th>
+      <th><%=t :ti_t_suit %></th>
+      <th><%=t :ti_t_place %></th>
+      <th><%=t :ti_t_comment %></th>
+      <th><%=t :ti_t_uploaded_at %></th>
     </tr>
   </thead>
   <tbody>
