--- a/app/views/tracks/show.html.erb
+++ b/app/views/tracks/show.html.erb
@@ -37,8 +37,8 @@
       $('#toggle_single').click(function(e) {
         e.preventDefault();
 
-        $('#li_toggle_single').removeClass('active');
-        $('#li_toggle_multi').addClass('active');
+        $('#li_toggle_single').addClass('active');
+        $('#li_toggle_multi').removeClass('active');
 
         $('#multiple-charts').hide();
         $('#single-chart').show();
