--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,7 @@
             <% if !controller.controller_name.eql? 'track_select' %>
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                  <%= image_tag 'blank.gif', class: "flag flag-#{ I18n.locale}" %>
+                  <%= image_tag asset_path('blank.gif'), class: "flag flag-#{ I18n.locale}" %>
                   <span class="caret"></span>
                 </a>
                 <%= lang_menu %>
