--- a/app/views/tracks/show.html.erb
+++ b/app/views/tracks/show.html.erb
@@ -494,7 +494,7 @@
               elev += point.elevation_diff;
 
               elev_data.push([fl_time, Math.round(elev * mft_un_k)]);
-              dist_data.push([fl_time, Math.round(dist * mft_un_kk)]);
+              dist_data.push([fl_time, Math.round(dist * mft_un_k)]);
               h_speed.push([fl_time, Math.round(point.h_speed / km_m_k)]);
               v_speed.push([fl_time, Math.round(point.v_speed / km_m_k)]);
               heights_data.push([fl_time, Math.round(point.elevation * mft_un_k)]);
